--- a/base16/pasque.yaml
+++ b/base16/pasque.yaml
@@ -2,7 +2,6 @@ system: "base16"
 name: "Pasque"
 author: "Gabriel Fontes (https://github.com/Misterio77)"
 variant: "dark"
-
 palette:
   base00: "#271C3A"
   base01: "#100323"
@@ -12,12 +11,11 @@ palette:
   base05: "#DEDCDF"
   base06: "#EDEAEF"
   base07: "#BBAADD"
-
-  base08: "#A92258" # Pink
-  base09: "#918889" # Gray
-  base0A: "#804ead" # Pasque
-  base0B: "#C6914B" # Gold
-  base0C: "#7263AA" # Lavender
-  base0D: "#8E7DC6" # Blue
-  base0E: "#953B9D" # Violet
-  base0F: "#59325C" # Magenta
+  base08: "#A92258"
+  base09: "#918889"
+  base0A: "#804ead"
+  base0B: "#C6914B"
+  base0C: "#7263AA"
+  base0D: "#8E7DC6"
+  base0E: "#953B9D"
+  base0F: "#59325C"
